# merkle-tree-collection-reader

./: .gitignore  Cargo.toml  README.md  bench.md
src/: lib.rs  main.rs
src/meta_merkle_tree/: error.rs  generated_merkle_tree.rs  merkle_tree.rs  meta_merkle_tree.rs  mod.rs  tree_node.rs  utils.rs
tests/: wincode_roundtrip.rs
