[package]
name = "merkle-tree-collection-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env", "cargo"] }
fast-math = "0.1"
log = "0.4.22"
serde = "1.0.228"
serde_json = "1.0.149"
bincode = { version = "2.0", features = ["serde"] }
solana-program = { version = "4.0.0", default-features = false, features = [] }
hex = "0.4.3"
thiserror = "2.0.18"
