[package]
name = "merkle-tree-collection-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env", "cargo"] }
fast-math = "0.1"
hex = "0.4.3"
log = "0.4.22"
serde = "1.0.228"
serde_json = "1.0.149"
solana-program = { version = "4.0.0", default-features = false, features = [] }
thiserror = "2.0.18"
wincode = { version = "0.5", features = ["derive"] }

[dev-dependencies]
solana-sdk = "=4.0.1"
